<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_agreement">User Agreement</string>
    <string name="about_lib_icp">ICP</string>
    <string name="about_privacy_policy">PrivacyPolicy</string>
    <string name="activity_about_privacy_policy_title">PrivacyPolicy</string>
    <string name="activity_feed_back_title">Feedback</string>
    <string name="activity_user_agreement_title">UserAgreement</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">多多手电筒</string>
    <string name="app_name_gq">高清手电筒</string>
    <string name="app_name_gqb">手电筒高清版</string>
    <string name="app_name_js">手电筒极速版</string>
    <string name="app_name_led">手电筒LED</string>
    <string name="app_name_ss">随身手电筒</string>
    <string name="bottomText">"为了更方便浏览内容,
请在桌面创建快捷方式"</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="click_back_return_app_home">Click again and return to home page</string>
    <string name="color_lights">Colored Light</string>
    <string name="contact_us">Contact Us</string>
    <string name="createNo">不创建</string>
    <string name="createYes">创建</string>
    <string name="dialog_about_privacy_policy"><u>PrivacyPolicy</u></string>
    <string name="dialog_user_agreement"><u>UserAgreement</u></string>
    <string name="feed_back_hint">Please fill in your valuable comments:</string>
    <string name="feed_back_sub_text">Submit</string>
    <string name="iSDK_GDT">iSDK_GDT</string>
    <string name="ido_about">About</string>
    <string name="ido_dlmg">Download manager</string>
    <string name="ido_feedback_test">FeedBack</string>
    <string name="ido_versionname">VersionName</string>
    <string name="kk">如果您同意《用户协议》和《隐私政策》，请点击同意隐私政策开始使用我们的产品。</string>
    <string name="live_in_loading">正在加载</string>
    <string name="live_in_loading_failed">加载失败，请稍后重试~</string>
    <string name="loadimgerror">Load Image Error</string>
    <string name="night_photo">Night Vision</string>
    <string name="nonet">No connection network</string>
    <string name="not_support">LED Lighting cannot be provided or Camera is working on other issues. Please change into the Colored Light.</string>
    <string name="now_open_vip">Unlock Now</string>
    <string name="permission_cancel_dialog">取消</string>
    <string name="permission_ok_dialog">去开启</string>
    <string name="pop_ok">OK</string>
    <string name="pop_tips">Tips</string>
    <string name="privacy_text">"1、设备识别码：使用应用或应用在后台运行时，收集内容包括但不限于设备硬件序列号、设备MAC地址、软件列表、设备唯一标识符（IMEI、Android ID、IDFA、OPENL JDID、GUID、OAID 、SIM卡IMSI信息）硬件型号、操作系统版本号、网络设备硬件地址（MAC）、IP地址、软件版本号、安装列表、网络接入方式及类型、操作日志等信息、手机号权限。目的是保障网络安全以及为您提供相关产品服务功能及信息展示的后续优化。

 2.存储权限（含SD卡）：为了将夜视相机拍好的照片存入手机，我们申请存储权限（含SD卡），如不授权夜视相机将无法使用。

 3.摄像头权限：为了夜视相机功能可以正常使用，我们将申请摄像头权限，如不授权夜视相机将无法使用。

 4.允许修改系统设置：为了提升用户体验，应用内彩灯功能需要将屏幕调至最亮，我们将申请允许修改系统权限，如不授权彩灯将无法调至最亮。

 5.网络访问权限：用于获取当前网络状态。

 6.获取WiFi状态：用于获取WiFi状态判断网络质量。

 7.软件安装列表信息：为了统计最终用户设备中各个移动应用的活跃情况，帮助分析并优化其产品功能和体验，减少对最终用户设备电量以及移动流量的消耗，我们会收集最终用户设备中的应用程序列表信息。

 8.传感器信息：应用集成第三方优量汇、穿山甲SDK，会收集设备传感器信息包含(线性加速度传感器、磁场传感器、旋转矢量传感器)，我们会基于收集到的信息，为您提供的广告请求和视图渲染相关服务以及广告反作弊。

 9.优量汇SDK(原名广点通)说明：个人信息类型：粗略位置信息、设备信息（如设备制造商、设备型号、操作系统版本等）、设备标识符（如IMEI、AndroidID、OAID、IDFA等）、应用信息（宿主应用的包名、版本号）、广告数据（如曝光、点击数据等）用于 广告投放、广告归因、广告反作弊。

 10.穿山甲SDK说明：设备信息(设备品牌、型号、软件系统版本相关信息、国际移动设备识别码(IMEI)、IOS系统广告标识符IDFA、安卓系统广告标识符OAID、AndroidId、设备硬件地址(MAC))、地理位置信息(通过GPS获取位置信息)、网络信息(IP地址、运营商、设备时区、网络接入方式及类型)、应用信息(开发者应用名、应用包名、版本号、应用前后台状态)、运行中进程信息、应用列表信息、性能数据(崩溃数据)、广告信息(广告的展示、点击及转化等交互数据)。用于穿山甲广告请求和视图渲染。

 11.友盟+统计SDK说明：设备信息（IMEI/MAC/Android ID/IDFA/OAID/OpenUDID/GUID/SIM卡IMSI/ICCID）、位置信息、网络信息（IP地址/SSID/BSSID/SN/运营商信息/联网方式）。为用户提供统计分析服务，并通过安装列表以及地理位置校准报表数据准确性，提供基础反作弊能力。

 我们使用的SDK由合作的第三方机构提供，我们仅能知悉其要求获取的权限，包括但不限于（IMEI、IMSI、MAC地址、OAID、软件安装列表等）。其使用目的及其范围方式详情参见隐私声明中《第三方SDK使用声明》。

"</string>
    <string name="rate_us">Rate us</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="recommend">Recommend</string>
    <string name="remaining_battery_can_time_HM">Remaining %1$s hour %2$s Min</string>
    <string name="remaining_battery_can_time_HMs">Remaining %1$s hour %2$s Mins</string>
    <string name="remaining_battery_can_time_M">Remaining %1$s Min</string>
    <string name="remaining_battery_can_time_Ms">Remaining %1$s Mins</string>
    <string name="responseerror">Response Is Null</string>
    <string name="resulterror">Get Result Info Error</string>
    <string name="search_menu_title">Search</string>
    <string name="shock">Key vibration</string>
    <string name="skip">跳过</string>
    <string name="sos_lights">SOS</string>
    <string name="sound">Voice broadcast</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="string_clean_completed">Successful cleanup</string>
    <string name="string_cleanning_rubbish">Clearing cache</string>
    <string name="string_cleanup_acceleration">Cleanup acceleration</string>
    <string name="string_complete">complete</string>
    <string name="string_completed">Has been completed</string>
    <string name="string_download_baidu_manager">Download Baidu mobile phone housekeeper before you can use this feature</string>
    <string name="string_function_flash">Lighting</string>
    <string name="string_function_other">Additional</string>
    <string name="string_function_toolbox">Box</string>
    <string name="string_install">install</string>
    <string name="string_memory_released">memory release</string>
    <string name="string_network_anomaly">Network anomaly</string>
    <string name="string_no_rubbish">No waste</string>
    <string name="string_realease_memory">Release memory</string>
    <string name="string_scanning_cache">Scanning cache</string>
    <string name="string_start_scan">Start scanning</string>
    <string name="sub_text">Submit Comments</string>
    <string name="title_dialog">开启必要权限</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="tool_box">Tool Box</string>
    <string name="tt_00_00">00:00</string>
    <string name="tt_ad">Ad</string>
    <string name="tt_ad_logo_txt">广告</string>
    <string name="tt_agg_page_close">关闭</string>
    <string name="tt_app_name">tt_open_ad_sdk</string>
    <string name="tt_app_privacy_dialog_title">隐私政策</string>
    <string name="tt_appdownloader_button_cancel_download">取消</string>
    <string name="tt_appdownloader_button_queue_for_wifi">排队</string>
    <string name="tt_appdownloader_button_start_now">立即开始</string>
    <string name="tt_appdownloader_download_percent">%1$d%%</string>
    <string name="tt_appdownloader_download_remaining">剩余时间：%1$s</string>
    <string name="tt_appdownloader_download_unknown_title">&lt;未命名></string>
    <string name="tt_appdownloader_duration_hours">%1$d 小时</string>
    <string name="tt_appdownloader_duration_minutes">%1$d 分钟</string>
    <string name="tt_appdownloader_duration_seconds">%1$d 秒</string>
    <string name="tt_appdownloader_jump_unknown_source">请打开应用安装权限，以便顺利安装！</string>
    <string name="tt_appdownloader_label_cancel">取消</string>
    <string name="tt_appdownloader_label_cancel_directly">直接取消</string>
    <string name="tt_appdownloader_label_ok">确定</string>
    <string name="tt_appdownloader_label_reserve_wifi">Wi-Fi下恢复</string>
    <string name="tt_appdownloader_notification_download">下载</string>
    <string name="tt_appdownloader_notification_download_complete_open">下载完成，点击打开。</string>
    <string name="tt_appdownloader_notification_download_complete_with_install">下载完成，点击安装。</string>
    <string name="tt_appdownloader_notification_download_complete_without_install">下载完成</string>
    <string name="tt_appdownloader_notification_download_continue">下载暂停中，点击继续。</string>
    <string name="tt_appdownloader_notification_download_delete">确认要删除%1$s的下载任务吗？</string>
    <string name="tt_appdownloader_notification_download_failed">下载失败。</string>
    <string name="tt_appdownloader_notification_download_install">安装</string>
    <string name="tt_appdownloader_notification_download_open">打开</string>
    <string name="tt_appdownloader_notification_download_pause">暂停</string>
    <string name="tt_appdownloader_notification_download_restart">重新下载</string>
    <string name="tt_appdownloader_notification_download_resume">继续</string>
    <string name="tt_appdownloader_notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="tt_appdownloader_notification_download_waiting_net">等待网络继续下载</string>
    <string name="tt_appdownloader_notification_download_waiting_wifi">等待wifi开始下载</string>
    <string name="tt_appdownloader_notification_downloading">正在下载</string>
    <string name="tt_appdownloader_notification_install_finished_open">安装完成，点击打开。</string>
    <string name="tt_appdownloader_notification_insufficient_space_error">空间不足 还需%1$s</string>
    <string name="tt_appdownloader_notification_need_wifi_for_size">文件过大，需要通过 WLAN 下载。</string>
    <string name="tt_appdownloader_notification_no_internet_error">下载异常，请检查网络</string>
    <string name="tt_appdownloader_notification_no_wifi_and_in_net">无Wi-Fi 已暂停</string>
    <string name="tt_appdownloader_notification_paused_in_background">已在后台暂停。</string>
    <string name="tt_appdownloader_notification_pausing">暂停中</string>
    <string name="tt_appdownloader_notification_prepare">准备中</string>
    <string name="tt_appdownloader_notification_request_btn_no">立即下载</string>
    <string name="tt_appdownloader_notification_request_btn_yes">去设置</string>
</resources>