<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/rl_preview_holder" android:layout_width="1.0dp" android:layout_height="1.0dp" android:layout_marginBottom="55.0dp" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <androidx.viewpager.widget.ViewPager android:id="@id/viewpager" android:layout_width="match_parent" android:layout_height="match_parent" />
    <LinearLayout android:orientation="horizontal" android:id="@id/botton_indicate_container" android:layout_width="match_parent" android:layout_height="@dimen/tab_height" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/function_other_ly" android:background="#3787ff" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/function_other_img" android:background="@drawable/tab_ic_other_normal" android:layout_width="36.0dp" android:layout_height="36.0dp" />
            <TextView android:textSize="12.0sp" android:textColor="#70ffffff" android:id="@id/function_other_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_function_other" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/function_flash_ly" android:background="#3787ff" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/function_flash_img" android:background="@drawable/tab_ic_flash_normal" android:layout_width="36.0dp" android:layout_height="36.0dp" />
            <TextView android:textSize="12.0sp" android:textColor="#70ffffff" android:id="@id/function_flash_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_function_flash" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/function_toolbox_ly" android:background="#3787ff" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/function_toolbox_img" android:background="@drawable/tab_ic_toolbox_normal" android:layout_width="36.0dp" android:layout_height="36.0dp" />
            <TextView android:textSize="12.0sp" android:textColor="#70ffffff" android:id="@id/function_toolbox_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_function_toolbox" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
